Update to the last local version.

--- a/config/babelnet.var.properties
+++ b/config/babelnet.var.properties
@@ -8,4 +8,10 @@
 # 
 #
 # babelnet.dir=PUT_BABELNET_DIR 
-babelnet.dir=/media/silvio/366E8F7B6E8F3323/Documents and Settings/Silvio/Desktop/BabelNet-2.5.1
+babelnet.dir=/Volumes/Transcend/BabelNet-3.6
+
+#babelnet.key=0b33af70-d68b-4a9f-9ab3-44da5ff0f9a5
+
+# BabelNet RESTFul service url
+#
+#babelnet.restfulurl=http://babelnet.io/v3/service
