--- a/config/babelnet.properties
+++ b/config/babelnet.properties
@@ -4,30 +4,23 @@
 
 include = babelnet.var.properties
 
-babelnet.fullFile = ${babelnet.dir}/babel-synsets-full.txt
-babelnet.dictFile = ${babelnet.dir}/babel-synsets-lexicon.txt
-babelnet.glossFile = ${babelnet.dir}/babel-synsets-gloss.txt
-babelnet.relFile = ${babelnet.dir}/babel-synsets-relations.txt
-babelnet.mapFile = ${babelnet.dir}/babel-synsets-mapping.txt
-
 babelnet.lexiconDir = ${babelnet.dir}/lexicon
 babelnet.dictDir = ${babelnet.dir}/dict
 babelnet.glossDir = ${babelnet.dir}/gloss
 babelnet.graphDir = ${babelnet.dir}/graph_CC_BY_NC_SA_30
 babelnet.mappingDir = ${babelnet.dir}/core_CC_BY_NC_SA_30
-
-babelnet.concept2babelid = ${babelnet.dir}/concept_babel_ids.txt
-babelnet.babelid2concept = ${babelnet.dir}/babel_concept_ids.txt
-babelnet.translations = ${babelnet.dir}/translations.txt
+babelnet.infoDir = ${babelnet.dir}/info_CC_BY_NC_SA_30
+babelnet.imageDir = ${babelnet.dir}/image
 
 # the available languages
-babelnet.languages = CA,DE,ES,FR,IT,IS,PL,RO,AF,AR,BG,CS,CY,DA,EL,ET,FA,FI,GA,HE,HI,HR,HU,ID,JA,KO,LT,LV,MS,NL,NO,PT,RU,SK,SL,SQ,SR,SV,SW,TL,TR,UK,VI,ZH,MT,EU,EO,LA,GL,SIMPLE
+babelnet.languages = CA,DE,ES,FR,IT,IS,PL,RO,AF,AR,BG,CS,CY,DA,EL,ET,FA,FI,GA,HE,HI,HR,HU,ID,JA,KO,LT,LV,MS,NL,NO,PT,RU,SK,SL,SQ,SR,SV,SW,TL,TR,UK,VI,ZH,MT,EU,EO,LA,GL,WAR,CEB,MIN,KK,UZ,HY,VO,NN,AZ,TH,OC,KA,MK,BE,NEW,TT,PMS,TA,TE,HT,UR,BS,BR,JV,MG,CE,LB,MR,IS,ML,PNB,BA,MY,LMO,BN,YO,FY,AN,CV,TG,KY,NE,IO,GU,BPY,SCO,SCN,NDS,KU,AST,QU,SU,ALS,GD,KN,AM,IA,NAP,CKB,BUG,WA,MN,ARZ,MZN,SI,PA,YI,SAH,VEC,FO,SA,BAR,NAH,OS,PAM,OR,HSB,SE,LI,MRJ,MI,ILO,CO,HIF,BCL,GAN,FRR,BO,RUE,GLK,MHR,PS,TK,PAG,VLS,GV,XMF,DIQ,KM,KV,ZEA,CSB,CRH,HAK,VEP,AY,DV,SO,SC,NRM,RM,UDM,KOI,KW,UG,STQ,LAD,WUU,LIJ,FUR,EML,MT,AS,BH,GN,PI,GAG,PCD,KSH,NOV,SZL,ANG,NV,IE,ACE,EXT,FRP,MWL,LN,SN,DSB,LEZ,PFL,KRC,HAW,PDC,KAB,XAL,RW,MYV,TO,ARC,KL,BJN,KBD,LO,HA,PAP,TPI,AV,LBE,MDF,JBO,WO,NA,BXR,TY,SRN,IG,NSO,KG,TET,KAA,AB,LTG,ZU,ZA,TYV,CDO,CHY,RMY,CU,TN,CHR,TW,GOT,BI,PIH,SM,RN,BM,MO,SS,IU,SD,PNT,KI,OM,XH,TS,EE,AK,FJ,TI,KS,LG,SG,NY,FF,VE,CR,ST,DZ,TUM,CH,SIMPLE,MUL,BE_X_OLD,NDS_NL,CBK_ZAM,ROA_RUP,FIU_VRO,BAT_SMG,IK
+
 # whether redirections also count as appropriate senses
 babelnet.useRedirectionSenses = true
 babelnet.image.filter = true
 babelnet.image.path = resources/jlt/stopImageVM.txt
-#SMALL, MEDIUM, BIG
-babelnet.image.size = BIG
+babelnet.image.restfulurl = http://babelnet.io/images
+babelnet.pointer.path = resources/jlt/pointer.txt
 
 
 #################
