--- a/config/jlt.var.properties
+++ b/config/jlt.var.properties
@@ -8,11 +8,11 @@
 # /usr/local/share/wordnet-2.1 and /usr/local/share/wordnet-3.0
 #
 # simply put /usr/local/share/wordnet
-#jlt.wordnetPrefix=/usr/local/share/wordnet
+jlt.wordnetPrefix=/opt/WordNet
 
 # The version of WordNet to use
 #
-#jlt.wordnetVersion=3.0
+jlt.wordnetVersion=3.0
 
 # The directory where all the data are
 # 
