--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,23 @@
 		</dependency>
 		<dependency>
 			<groupId>it.uniroma1.lcl</groupId>
-			<artifactId>jlt</artifactId>
-			<version>1.0.0</version>
+			<artifactId>babelnet</artifactId>
+			<version>3.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>it.uniroma1.lcl</groupId>
-			<artifactId>babelnet</artifactId>
-			<version>2.5.1</version>
+			<artifactId>babelfy</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>it.uniroma1.lcl</groupId>
+			<artifactId>babelfy-commons</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>it.uniroma1.lcl</groupId>
+			<artifactId>jlt</artifactId>
+			<version>2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -31,11 +41,6 @@
 			<groupId>it.unige.dibris</groupId>
 			<artifactId>ADM</artifactId>
 			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.hp.hpl.jena</groupId>
-			<artifactId>jena</artifactId>
-			<version>2.6.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.annolab.tt4j</groupId>
@@ -55,17 +60,22 @@
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>1.9.2</version>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils-core</artifactId>
+			<version>1.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.4</version>
+			<version>1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
+			<version>3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
@@ -73,9 +83,19 @@
 			<version>1.5</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-digester</groupId>
+			<artifactId>commons-digester</artifactId>
+			<version>1.8</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
-			<version>3.1</version>
+			<version>4.3.6</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpmime</artifactId>
+		    <version>4.3.6</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -85,27 +105,38 @@
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<version>2.4</version>
+			<version>2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
+			<version>1.2</version>
 		</dependency>
-		<dependency>
-			<groupId>com.google.collections</groupId>
-			<artifactId>google-collections</artifactId>
-			<version>0.8</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.2.3</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.2.2</version>
+			<version>4.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>56.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.itadaki</groupId>
@@ -118,29 +149,10 @@
 			<version>4.1.6</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-arq</artifactId>
-			<version>2.11.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-core</artifactId>
-			<version>2.11.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-iri</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-sdb</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-tdb</artifactId>
-			<version>1.0.0</version>
+		    <groupId>org.apache.jena</groupId>
+		    <artifactId>apache-jena-libs</artifactId>
+		    <type>pom</type>
+		    <version>2.11.1</version> <!-- Set version -->
 		</dependency>
 		<dependency>
 			<groupId>jgrapht</groupId>
@@ -165,17 +177,22 @@
 		<dependency>
 			<groupId>edu.mit</groupId>
 			<artifactId>jwi</artifactId>
-			<version>2.1.4</version>
+			<version>2.2.3</version>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>2.9.1</version>
+			<version>4.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-queryparser</artifactId>
+			<version>4.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -235,13 +252,23 @@
       <configuration>
         <archive>
           <manifest>
-            <mainClass>it.unige.dibris.moodtc.GUI</mainClass>
+            <mainClass>it.unige.dibris.moodtc.Gui</mainClass>
           </manifest>
         </archive>
         <descriptorRefs>
           <descriptorRef>jar-with-dependencies</descriptorRef>
         </descriptorRefs>
       </configuration>
+      <executions>
+		  <execution>
+			<id>make-assembly</id>
+                                      <!-- bind to the packaging phase -->
+			<phase>package</phase> 
+			<goals>
+				<goal>single</goal>
+			</goals>
+		  </execution>
+		</executions>
     </plugin>
 		</plugins>
 	</build>
